--- a/src/index.css
+++ b/src/index.css
@@ -52,15 +52,13 @@ p {
 }
 
 .recipe {
-  padding: 1rem;
   margin: 1rem;
   position: relative;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
 .recipe-title {
-  font-size: 1.5rem;
-  height: 3rem;
+  font-size: 1rem;
 }
 
 .recipe-rating {
@@ -71,7 +69,7 @@ p {
 }
 
 .recipe-img {
-  width: 10rem;
+  width: 100%;
   height: 10rem;
   object-fit: cover;
   margin-bottom: 1rem;
@@ -219,4 +217,8 @@ p {
 }
 .recipe-prep h5 {
   font-weight: 800;
+}
+
+.nav-list {
+  margin-left: auto;
 }
