--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f3ef;
 }
 
 code {
@@ -25,6 +26,14 @@ p {
   font-family: "Mukta", sans-serif;
 }
 
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .d-flex {
   display: flex;
 }
@@ -33,32 +42,83 @@ p {
   width: 10rem;
 }
 
+.sub-footer {
+  background-color: #e7e7e7;
+  height: 6rem;
+  color: black;
+}
+.footer {
+  background-color: black;
+  height: 8rem;
+  color: white;
+}
+
+.left-scroll {
+  background-color: transparent;
+  border: 0;
+  margin-left: -7rem;
+}
+
+.right-scroll {
+  background-color: transparent;
+  border: 0;
+  margin-right: -7rem;
+}
+
 .alexandshanda {
   width: 100%;
   height: 75vh;
   object-fit: cover;
   object-position: 20% 10%;
 }
+.suggestions {
+  margin: 2rem 12rem;
+}
 
 .inspiration {
   margin-top: 2rem;
+  text-align: left;
+  font-size: 1.5rem !important;
+}
+
+.pinell-times {
+  text-align: left;
+  font-size: 1.5rem !important;
+  color: #999;
+  margin-bottom: -1.5rem;
 }
 
 .recipe-grid {
   margin: 2.5rem 4rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: column;
   grid-gap: 10px;
+  overflow-y: scroll;
 }
 
 .recipe {
   margin: 1rem;
   position: relative;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+  width: 13rem;
+  height: 16rem;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .recipe-title {
   font-size: 1rem;
+  font-weight: 600;
+  color: black;
+  text-decoration: none;
+}
+
+.card-tags {
+  color: black;
+  font-size: 0.75rem;
+  color: #999;
 }
 
 .recipe-rating {
@@ -72,7 +132,6 @@ p {
   width: 100%;
   height: 10rem;
   object-fit: cover;
-  margin-bottom: 1rem;
 }
 
 .tags {
@@ -80,6 +139,16 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0.5rem;
+}
+
+.recipe-card-bottom {
+  padding: 0.5rem;
+  position: relative;
+  height: 6rem;
 }
 
 .no-margin-bottom {
